bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: ';' expected but string literal found.
  if (litMessage()) == "R"
                       ^BDR:4: error: ';' expected but string literal found.
  if (litMessage()) == "L"
                       ^BDR:6: error: ';' expected but string literal found.
  if (litMessage()) == "I"
                       ^BDR:8: error: ';' expected but string literal found.
  if (litMessage()) == "A"
                       ^BDR:10: error: ';' expected but string literal found.
  if (litMessage()) == "B"
                       ^BDR:12: error: ';' expected but string literal found.
  if (litMessage()) == "C"
                       ^BDR:14: error: ';' expected but string literal found.
  if (litMessage()) == "Z"
                       ^BDR:16: error: ';' expected but string literal found.
  if (litMessage()) == "Y"
                       ^BDR:18: error: ';' expected but string literal found.
  if (litMessage()) == "Z"
                       ^